--- a/compose.yml
+++ b/compose.yml
@@ -13,10 +13,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ~/.ipc:/root/.ipc
-    command:
-      [
-        "cargo make --makefile ./infra/fendermint/Makefile.toml bootstrap && cargo make --makefile ./infra/fendermint/Makefile.toml bootstrap-down"
-      ]
+    command: [ "cargo make --makefile ./infra/fendermint/Makefile.toml bootstrap && cargo make --makefile ./infra/fendermint/Makefile.toml bootstrap-down" ]
 
   validator-1:
     build:
@@ -39,6 +36,11 @@ services:
       - ~/.ipc:/root/.ipc
       - ./.env:/root/.env
     entrypoint: /app/capture-ids.sh
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   validator-2:
     build:
@@ -60,10 +62,12 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ~/.ipc:/root/.ipc
-    command:
-      [
-        "cargo make --makefile ./infra/fendermint/Makefile.toml child-validator && tail -f /dev/null"
-      ]
+    command: [ "cargo make --makefile ./infra/fendermint/Makefile.toml child-validator" ]
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   validator-3:
     build:
@@ -85,10 +89,12 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ~/.ipc:/root/.ipc
-    command:
-      [
-        "cargo make --makefile ./infra/fendermint/Makefile.toml child-validator && tail -f /dev/null"
-      ]
+    command: [ "cargo make --makefile ./infra/fendermint/Makefile.toml child-validator" ]
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   ipc-cli:
     build:
