--- a/Dockerfile.ipc
+++ b/Dockerfile.ipc
@@ -1,5 +1,5 @@
 # Stage 1: Build the IPC project
-FROM rust:slim as builder
+FROM rust:slim AS builder
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
